# KodiKontrol

./: .gitmodules  Cargo.toml  Cargo.windows.toml  README.md  build-docker.sh  koko.ini.example
.github/workflows/: build.yaml  tag.yaml
dockerfiles/: Dockerfile.ubuntu
scripts/: cargo-toml-for-windows.ps1  update-cargo-version.sh
src/: config.rs  discover.rs  error.rs  exit.rs  kodi_control.rs  kodi_rpc.rs  kodi_rpc_types.rs  lib.rs  server.rs  ui.rs  ui_callback.rs  ui_discovery.rs  ui_seek.rs  ui_setup.rs  util.rs
