[package]
name = "kodi_kontrol"
version = "0.4.0"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.5.1"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
thiserror = "1.0.22"
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
actix-web = { version = "4.0.0-beta.8" }
actix-rt = "2.2.0"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
hyper = { version = "0.14.7", features = ["client", "http1"] }
url = "2.2.2"
async-jsonrpc-client = { path = "ext/async-jsonrpc/client" }
log = "0.4.14"
serde_json = "1.0.64"
actix-files = "0.6.0-beta.6"
futures = "0.3.15"
trust-dns-resolver = "0.20.3"
percent-encoding = "2.1.0"
cursive = "0.16.3"
async-trait = "0.1.50"
log4rs = "1.0.0"
# [lib]
# name = "mute_keyboard_plugin"
# crate-type = ["dylib"]

[build-dependencies]
vergen = "3"
