[package]
name = "kodi_kontrol"
version = "0.7.0"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.5.1"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
thiserror = "1.0.22"
anyhow = "1.0.34"
actix-web = { version = "4.0.0-beta.8" }
actix-rt = "2.2.0"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
hyper = { version = "0.14.7", features = ["client", "http1"] }
url = "2.2.2"
async-jsonrpc-client = { path = "ext/async-jsonrpc/client" }
log = "0.4.14"
serde_json = "1.0.64"
actix-files = "0.6.0-beta.6"
futures = "0.3.15"
trust-dns-resolver = "0.20.3"
percent-encoding = "2.1.0"
async-trait = "0.1.50"
log4rs = "1.0.0"
http-auth-basic = "0.1.3"
atomicwrites = "0.3.0"
directories = "3.0.2"
mdns = { path = "ext/mdns" }

# Non-windows specifics: https://github.com/rust-lang/cargo/issues/1197
# Changes applied by scripts/cargo-toml-for-windows.ps1 used by the ci scripts for Windows
cursive = { version = "0.16.3" } #_FOR_WINDOWS cursive = { version = "0.16.3", features = ["crossterm-backend"], default-features = false, optional = false }
clap = "3.0.0-beta.2" #_FOR_WINDOWS clap = { version = "3.0.0-beta.2", features = ["std", "suggestions", "derive", "cargo"], default-features = false, optional = false }

[build-dependencies]
vergen = "3"
